--- a/src/App.css
+++ b/src/App.css
@@ -103,14 +103,10 @@ body{
   align-items: center;
   padding:10px; 
   margin-top:20px;
-  position: fixed;
+  position: inherit;
   width: 80%;
-  top: 24px;
-  left:50%;
-  transform: translateX(-50%);
-  transition: transform 0.4s ease, opacity 0.3s ease;
-  z-index: 999;
-  
+  top: 0;
+  margin: 24px auto;
   border-radius: 99px;
   box-shadow: 0 11px 34px 0 rgba(0, 0, 0, .15);
   height: var(--nav-bar-height);
@@ -137,15 +133,6 @@ body{
 
   transition: transform 0.3s ease-in-out;
 
-}
-.header.hide {
-  transform: translateY(-120%);
-  opacity: 0;
-}
-
-.header.show {
-  transform: translateY(0);
-  opacity: 1;
 }
 
 a, a:hover, a:visited {
@@ -204,7 +191,7 @@ a, a:hover, a:visited {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 130px;
+  margin-top: 60px;
 }
 .Header_title_h1{
   color: #fff;
